--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "slab";
-  src: url("/fonts/RobotoSlab-VariableFont_wght.ttf");
+  src: url("../fonts/RobotoSlab-VariableFont_wght.ttf");
 }
 
 body {
@@ -12,7 +12,7 @@ body {
 
 .header {
   height: 180px;
-  background-image: url("/img/gatos.jpg");
+  background-image: url("../img/gatos.jpg");
   background-repeat: no-repeat;
   background-position: center;
   text-align: center;
